--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/styles.css"
   </head>
   <body>
+    <p>test</p>
     <!-- this is the branding/main heading for the blog -->
     Dear Design Student
 
