--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles/styles.css"
   </head>
   <body>
-    <p>test</p>
     <!-- this is the branding/main heading for the blog -->
     Dear Design Student
 
@@ -30,15 +29,13 @@
     “Photoshop: 85%,” this makes 0% sense to me which is to say, none-at-all.
     And since when in the hell is Photoshop a skill?
     <!---->
-    <p>
-      In the last 25 years, I have personally reviewed hundreds of applications,
-      resumes, and portfolios. As I recall, the “percentages” started appearing
-      around the time Nicolas Felton started to publish ********(add this link
-      to 'annual reports' http://feltron.com/)******** annual reports with
-      visualized data on all facets of his life in 2004. A year or two later
-      young persons, fresh out of school, started trying to make their resumes
-      stand out by visualizing their data, even when it meant making things up.
-    </p>
+    In the last 25 years, I have personally reviewed hundreds of applications,
+    resumes, and portfolios. As I recall, the “percentages” started appearing
+    around the time Nicolas Felton started to publish ********(add this link to
+    'annual reports' http://feltron.com/)******** annual reports with visualized
+    data on all facets of his life in 2004. A year or two later young persons,
+    fresh out of school, started trying to make their resumes stand out by
+    visualizing their data, even when it meant making things up.
     <!---->
     There are two problems with this. First, trying to communicate something as
     a percentage of 100 without any context. Second, mistaking tools with
